--- a/Designer/Interface/Navigator.xaml
+++ b/Designer/Interface/Navigator.xaml
@@ -55,6 +55,7 @@
 			<StackPanel Orientation="Vertical" >
 				<local:ProjectList ItemsSource="{Binding Path=Project.Namespace.Children}" ItemContainerStyle="{StaticResource NamespaceContainerTemplate}" ItemTemplate="{StaticResource NamespaceItemTemplate}" ItemsPanel="{StaticResource ProjectListPanelTemplate}" />
 				<local:ProjectList ItemsSource="{Binding Path=Project.Namespace.Services}" ItemContainerStyle="{StaticResource ServiceContainerTemplate}" ItemTemplate="{StaticResource ServiceItemTemplate}" ItemsPanel="{StaticResource ProjectListPanelTemplate}" />
+				<local:ProjectList ItemsSource="{Binding Path=Project.Namespace.RESTServices}" ItemContainerStyle="{StaticResource RESTContainerTemplate}" ItemTemplate="{StaticResource RESTItemTemplate}" ItemsPanel="{StaticResource ProjectListPanelTemplate}" />
 				<local:ProjectList ItemsSource="{Binding Path=Project.Namespace.Data}" ItemContainerStyle="{StaticResource DataContainerTemplate}" ItemTemplate="{StaticResource DataItemTemplate}" ItemsPanel="{StaticResource ProjectListPanelTemplate}" />
 				<local:ProjectList ItemsSource="{Binding Path=Project.Namespace.Enums}" ItemContainerStyle="{StaticResource EnumContainerTemplate}" ItemTemplate="{StaticResource EnumItemTemplate}" ItemsPanel="{StaticResource ProjectListPanelTemplate}" />
 				<local:ProjectItemList ItemsSource="{Binding Path=Project.Namespace.Bindings}" ItemContainerStyle="{StaticResource BindingContainerTemplate}" ItemTemplateSelector="{StaticResource ProjectListBindingTemplateSelector}" ItemsPanel="{StaticResource ProjectListPanelTemplate}" />
