--- a/Designer/Interface/REST/Service.xaml
+++ b/Designer/Interface/REST/Service.xaml
@@ -192,7 +192,7 @@
 				<Label Content="Max Items In Object Graph:" VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
 				<sf:IntegerTextBox Value="{Binding Path=ServiceType.SBMaxItemsInObjectGraph}" Margin="175,5,5,5" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Name="SBMaxItemsInObjectGraph" Grid.Row="2" Grid.Column="0" FontSize="10pt" ToolTip="Specify the number of Items in the Serialization Object Graph (0 is Int32.MaxValue)." />
 				<Label Content="Transaction Timeout:" VerticalAlignment="Center" Grid.Row="2" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-				<sf:TimeSpanEdit Value="{Binding Path=ServiceType.SBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" FontSize="10pt" Style="{DynamicResource TimeSpanEditStyle}" />
+				<sf:TimeSpanEdit Value="{Binding Path=ServiceType.SBTransactionTimeout, Mode=TwoWay}" Margin="175,5,5,5" Format="hh:mm:ss" ShowArrowButtons="False" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="2" FontSize="10pt" />
 				<ToggleButton Content="Automatic Session Shutdown" IsChecked="{Binding Path=ServiceType.SBAutomaticSessionShutdown}" Margin="5" Grid.Column="0" Grid.Row="3" />
 				<ToggleButton Content="Ensure Ordered Dispatch" IsChecked="{Binding Path=ServiceType.SBEnsureOrderedDispatch}" Margin="5" Grid.Column="1" Grid.Row="3" />
 				<ToggleButton Content="Ignore Extension Data Object" IsChecked="{Binding Path=ServiceType.SBIgnoreExtensionDataObject}" Margin="5" Grid.Column="0" Grid.Row="4" />
@@ -266,7 +266,6 @@
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
 									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
 								</Grid.RowDefinitions>
 								<Label Grid.Row="0" Grid.ColumnSpan="2" Content="Address" FontSize="12pt" Margin="0,5,0,0" />
 								<Label Content="Address:" Height="Auto" HorizontalAlignment="Left" Margin="0,1,0,0" VerticalContentAlignment="Center" Grid.Row="1" />
@@ -274,58 +273,6 @@
 								<Label Content="Port:" Height="Auto" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="0" Grid.Row="2" />
 								<sf:IntegerTextBox Margin="65,5,5,5" Value="{Binding Path=ServiceType.EndpointPort}" Grid.Row="2" Name="ServerPort" HorizontalContentAlignment="Left" />
 								<ToggleButton IsChecked="{Binding Path=ServiceType.EndpointUseHTTPS}" Content="Use HTTPS" Margin="5" Grid.Column="1" Grid.Row="2" />
-								<Grid Grid.Row="3" Grid.ColumnSpan="2" MinHeight="100" MaxHeight="150">
-									<Grid.ColumnDefinitions>
-										<ColumnDefinition Width="*" />
-										<ColumnDefinition Width="*" />
-										<ColumnDefinition Width="75" />
-									</Grid.ColumnDefinitions>
-									<Grid.RowDefinitions>
-										<RowDefinition Height="Auto" />
-										<RowDefinition Height="*"/>
-									</Grid.RowDefinitions>
-									<Label Content="Address Header:" Height="Auto" HorizontalAlignment="Left" Margin="0,1,0,0" VerticalContentAlignment="Center" Width="Auto" />
-									<pc:TextBox Name="AddressHeader" Height="23" Margin="111,5,5,5" VerticalAlignment="Top" TextChanged="AddressHeader_TextChanged" />
-									<Label Content="Name:" Height="Auto" HorizontalAlignment="Left" Margin="5,1,0,0" VerticalContentAlignment="Center" Width="Auto" Grid.Column="1" />
-									<pc:TextBox Name="AddressHeaderName" Height="23" Margin="56,5,5,5" VerticalAlignment="Top" Grid.Column="1" TextChanged="AddressHeaderName_TextChanged" />
-									<Button Content="Add" Height="23" Margin="5" Name="AddAddressHeader" VerticalAlignment="Top" Grid.Column="2" Click="AddAddressHeader_Click" />
-									<ListBox Grid.ColumnSpan="3" Grid.Row="1" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ItemsSource="{Binding Path=Data.EndpointAddressHeaders}" Margin="0" Name="AddressHeadersList" BorderThickness="0" Background="Transparent" >
-										<ListBox.ItemTemplate>
-											<DataTemplate DataType="{x:Type Projects:HostEndpointAddressHeader}">
-												<Border Background="Transparent" BorderBrush="#01FFFFFF" BorderThickness="0" CornerRadius="0" Name="BG">
-													<Grid>
-														<Grid.ColumnDefinitions>
-															<ColumnDefinition Width="2*" />
-															<ColumnDefinition Width="*" />
-															<ColumnDefinition Width="24" />
-														</Grid.ColumnDefinitions>
-														<Grid.RowDefinitions>
-															<RowDefinition Height="Auto" />
-														</Grid.RowDefinitions>
-														<TextBlock Grid.Column="0" Text="{Binding Path=Namespace}" TextTrimming="CharacterEllipsis" TextWrapping="Wrap" VerticalAlignment="Center" />
-														<TextBlock Grid.Column="1" Text="{Binding Path=Name}" TextTrimming="CharacterEllipsis" TextWrapping="Wrap" VerticalAlignment="Center" />
-														<Button Name="DeleteAddressHeader" Visibility="Hidden" Grid.Column="2" Margin="1,1,2,1" Padding="0" Click="DeleteAddressHeader_Click">
-															<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
-														</Button>
-													</Grid>
-												</Border>
-												<DataTemplate.Triggers>
-													<DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsMouseOver}" Value="True">
-														<Setter Property="Background" TargetName="BG" Value="{StaticResource MouseOverBackgroundColor}" />
-														<Setter Property="Visibility" TargetName="DeleteAddressHeader" Value="Visible" />
-													</DataTrigger>
-													<DataTrigger Binding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type ListBoxItem}}, Path=IsSelected}" Value="True">
-														<Setter Property="Background" TargetName="BG" Value="{StaticResource DefaultSelectionColor}" />
-														<Setter Property="Visibility" TargetName="DeleteAddressHeader" Value="Visible" />
-													</DataTrigger>
-												</DataTemplate.Triggers>
-											</DataTemplate>
-										</ListBox.ItemTemplate>
-										<ListBox.Resources>
-											<SolidColorBrush Color="#00FFFFFF" x:Key="{x:Static SystemColors.HighlightBrushKey}" />
-										</ListBox.Resources>
-									</ListBox>
-								</Grid>
 							</Grid>
 							<Grid Grid.Row="1" DataContext="{Binding Path=ServiceType.EndpointBinding}">
 								<Grid.RowDefinitions>
