--- a/Designer/Themes/TimeSpanEdit.xaml
+++ b/Designer/Themes/TimeSpanEdit.xaml
@@ -7,69 +7,12 @@
 		<ResourceDictionary Source="pack://application:,,,/NETPath;component/Themes/Colors.xaml" />
 	</ResourceDictionary.MergedDictionaries>
 
-	<!--<Style TargetType="sf:TimeSpanEdit">
-		<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}" />
-		<Setter Property="BorderBrush" Value="Transparent" />
-		<Setter Property="BorderThickness" Value="0" />
-		<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}" />
-		<Setter Property="SelectionBackground" Value="{StaticResource DefaultBackgroundColor}" />
-		<Setter Property="SelectionForeground" Value="{StaticResource DefaultFontColor}" />
-		<Setter Property="HorizontalContentAlignment" Value="Stretch" />
-		<Setter Property="VerticalContentAlignment" Value="Center" />
-		<Setter Property="Padding" Value="1,2" />
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="sf:TimeSpanEdit">
-					<Grid x:Name="Root">
-						<VisualStateManager.VisualStateGroups>
-							<VisualStateGroup x:Name="ValidationStates">
-								<VisualState x:Name="Valid" />
-								<VisualState x:Name="InvalidUnfocused">
-									<Storyboard>
-										<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ValidationDecorator" Storyboard.TargetProperty="ValidationState">
-											<DiscreteObjectKeyFrame KeyTime="0">
-												<DiscreteObjectKeyFrame.Value>
-													<c1:ValidationState>InvalidUnfocused</c1:ValidationState>
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
-										</ObjectAnimationUsingKeyFrames>
-									</Storyboard>
-								</VisualState>
-								<VisualState x:Name="InvalidFocused">
-									<Storyboard>
-										<ObjectAnimationUsingKeyFrames Storyboard.TargetName="ValidationDecorator" Storyboard.TargetProperty="ValidationState">
-											<DiscreteObjectKeyFrame KeyTime="0">
-												<DiscreteObjectKeyFrame.Value>
-													<c1:ValidationState>InvalidFocused</c1:ValidationState>
-												</DiscreteObjectKeyFrame.Value>
-											</DiscreteObjectKeyFrame>
-										</ObjectAnimationUsingKeyFrames>
-									</Storyboard>
-								</VisualState>
-							</VisualStateGroup>
-						</VisualStateManager.VisualStateGroups>
-						<Border x:Name="BackgroundElement" Background="{TemplateBinding Background}" BorderThickness="{TemplateBinding BorderThickness}" CornerRadius="0" BorderBrush="{TemplateBinding BorderBrush}" >
-							<sf:TimeSpanEdit x:Name="TextBox" Grid.Column="0" BorderThickness="0" Foreground="{TemplateBinding Foreground}" Background="Transparent" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Text="" Margin="{TemplateBinding Padding}" />
-						</Border>
-					</Grid>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsKeyboardFocusWithin" Value="True">
-							<Setter Property="Background" Value="{StaticResource FocusedBackgroundColor}" />
-						</Trigger>
-						<Trigger Property="IsEnabled" Value="False">
-							<Setter Property="Foreground" Value="{StaticResource DisabledFontColor}" />
-						</Trigger>
-					</ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
-	</Style>-->
-
 	<Style TargetType="{x:Type sf:TimeSpanEdit}">
 		<Setter Property="Foreground" Value="{StaticResource DefaultFontColor}"/>
 		<Setter Property="Background" Value="{StaticResource DefaultBackgroundColor}"/>
 		<Setter Property="BorderBrush" Value="{StaticResource DefaultBorderColor}"/>
 		<Setter Property="BorderThickness" Value="0"/>
+		<Setter Property="MinHeight" Value="24"/>
 		<Setter Property="ShowArrowButtons" Value="False"/>
 		<Setter Property="AllowDrop" Value="False"/>
 		<Setter Property="FocusVisualStyle" Value="{x:Null}"/>
