--- a/Designer/Interface/REST/Service.xaml
+++ b/Designer/Interface/REST/Service.xaml
@@ -63,9 +63,82 @@
 										</MultiBinding>
 									</TextBlock.Text>
 								</TextBlock>
-
 							</StackPanel>
 							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteOperation_Click">
+								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+							</Button>
+						</Grid>
+						<DataTemplate.Triggers>
+							<MultiDataTrigger>
+								<MultiDataTrigger.Conditions>
+									<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" />
+									<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="False" />
+								</MultiDataTrigger.Conditions>
+								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
+							</MultiDataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" >
+								<Setter TargetName="DeleteOperation" Property="Visibility" Value="Visible" />
+							</DataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True" >
+								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+							</DataTrigger>
+						</DataTemplate.Triggers>
+					</DataTemplate>
+
+					<DataTemplate x:Key="{x:Type Projects:RESTHTTPClientConfiguration}" DataType="{x:Type Projects:RESTHTTPClientConfiguration}">
+						<Grid Name="ItemGrid" >
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="*" />
+								<ColumnDefinition Width="Auto" />
+							</Grid.ColumnDefinitions>
+							<Grid.RowDefinitions>
+								<RowDefinition Height="Auto" />
+							</Grid.RowDefinitions>
+							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+							<StackPanel Orientation="Vertical" Margin="3">
+								<StackPanel Orientation="Horizontal">
+									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/HttpClientConfig.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+									<TextBlock Text="{Binding Path=Name}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+								</StackPanel>
+							</StackPanel>
+							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteConfiguration_Click">
+								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
+							</Button>
+						</Grid>
+						<DataTemplate.Triggers>
+							<MultiDataTrigger>
+								<MultiDataTrigger.Conditions>
+									<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" />
+									<Condition Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="False" />
+								</MultiDataTrigger.Conditions>
+								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource MouseOverBackgroundColor}" />
+							</MultiDataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsMouseOver}" Value="True" >
+								<Setter TargetName="DeleteOperation" Property="Visibility" Value="Visible" />
+							</DataTrigger>
+							<DataTrigger Binding="{Binding RelativeSource={RelativeSource Mode=FindAncestor,AncestorType={x:Type ListBoxItem}},Path=IsSelected}" Value="True" >
+								<Setter TargetName="ItemBG" Property="Background" Value="{StaticResource DefaultSelectionColor}" />
+							</DataTrigger>
+						</DataTemplate.Triggers>
+					</DataTemplate>
+
+					<DataTemplate x:Key="{x:Type Projects:RESTHTTPWebConfiguration}" DataType="{x:Type Projects:RESTHTTPWebConfiguration}">
+						<Grid Name="ItemGrid" >
+							<Grid.ColumnDefinitions>
+								<ColumnDefinition Width="*" />
+								<ColumnDefinition Width="Auto" />
+							</Grid.ColumnDefinitions>
+							<Grid.RowDefinitions>
+								<RowDefinition Height="Auto" />
+							</Grid.RowDefinitions>
+							<Border x:Name="ItemBG" Grid.ColumnSpan="2" Background="Transparent" CornerRadius="5" />
+							<StackPanel Orientation="Vertical" Margin="3">
+								<StackPanel Orientation="Horizontal">
+									<Image x:Name="Icon" Source="pack://application:,,,/NETPath;component/Icons/X16/HttpWebConfig.png" Width="16" Height="16" Stretch="None" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="0,0,4,0" />
+									<TextBlock Text="{Binding Path=Name}" Foreground="{StaticResource DefaultFontColor}" FontFamily="{StaticResource DefaultFontFamily}" FontSize="11pt" />
+								</StackPanel>
+							</StackPanel>
+							<Button Grid.Column="1" x:Name="DeleteOperation" Visibility="Collapsed" Margin="0" Padding="0" Width="30" Style="{StaticResource ListItemButtonRight}" Click="DeleteConfiguration_Click">
 								<Image Source="pack://application:,,,/NETPath;component/Icons/X16/Delete.png" HorizontalAlignment="Center" VerticalAlignment="Center" UseLayoutRounding="True" Height="16" Width="16" Stretch="Uniform"/>
 							</Button>
 						</Grid>
@@ -103,15 +176,19 @@
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*" />
 			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
+			<ColumnDefinition Width="*" />
 		</Grid.ColumnDefinitions>
-		<Label Content="Protection Level:" VerticalAlignment="Center" Grid.Column="0" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-		<ComboBox Height="23" Margin="115,5,5,5" SelectedIndex="{Binding Path=ServiceType.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="0" >
+		<ToggleButton IsChecked="{Binding Path=ServiceType.GenerateServer}" Content="Generate Server Code" Margin="5" VerticalContentAlignment="Center" Grid.Column="0" Grid.Row="1" />
+		<ToggleButton IsChecked="{Binding Path=ServiceType.GenerateClient}" Content="Generate Client Code" Margin="5" VerticalContentAlignment="Center" Grid.Column="1" Grid.Row="1" />
+		<Label Content="Protection Level:" VerticalAlignment="Center" Grid.Column="2" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+		<ComboBox Height="23" Margin="115,5,5,5" SelectedIndex="{Binding Path=ServiceType.ProtectionLevel, Converter={StaticResource ProtectionLevelConverter}}" Grid.Column="2" >
 			<ComboBoxItem Content="None" />
 			<ComboBoxItem Content="Sign" />
 			<ComboBoxItem Content="Encrypt and Sign" />
 		</ComboBox>
-		<Label Content="Configuration Name:" VerticalAlignment="Center" Grid.Column="1" HorizontalAlignment="Left" Margin="0" Width="Auto" />
-		<pc:TextBox Height="23" Margin="138,5,5,5" Text="{Binding Path=ServiceType.ConfigurationName}" ToolTip="{Binding Path=ServiceType.ConfigurationName}"  Grid.Column="1"/>
+		<Label Content="Configuration Name:" VerticalAlignment="Center" Grid.Column="3" HorizontalAlignment="Left" Margin="0" Width="Auto" />
+		<pc:TextBox Height="23" Margin="138,5,5,5" Text="{Binding Path=ServiceType.ConfigurationName}" ToolTip="{Binding Path=ServiceType.ConfigurationName}"  Grid.Column="3"/>
 	</Grid>
 	<TabControl Grid.Row="3" Margin="0,10,0,0">
 		<TabItem Padding="10,5" IsSelected="True">
@@ -140,6 +217,35 @@
 					</Grid.ColumnDefinitions>
 					<ListBox x:Name="ServiceOperationsList" Grid.Column="0" ItemsSource="{Binding Path=ServiceType.ServiceOperations}" AllowDrop="True" BorderThickness="0" Background="Transparent" Margin="0" SelectionMode="Single" Padding="-1,0" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" VirtualizingStackPanel.IsVirtualizing="False" SelectionChanged="ServiceOperationsList_SelectionChanged"  PreviewMouseLeftButtonDown="ServiceOperationsList_PreviewMouseLeftButtonDown" PreviewMouseMove="ServiceOperationsList_PreviewMouseMove" QueryContinueDrag="ServiceOperationsList_QueryContinueDrag" DragLeave="ServiceOperationsList_DragLeave" PreviewDragOver="ServiceOperationsList_PreviewDragOver" PreviewDrop="ServiceOperationsList_Drop" />
 					<ContentPresenter Grid.Column="1" Grid.Row="1" Margin="5,0,0,0" Content="{Binding Path=ActiveOperation}" />
+				</Grid>
+			</Grid>
+		</TabItem>
+		<TabItem Padding="10,5" IsSelected="True">
+			<TabItem.Header>
+				<TextBlock Text="Client Configurations" FontSize="12pt"/>
+			</TabItem.Header>
+			<Grid Margin="0,5,5,0">
+				<Grid.ColumnDefinitions>
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="*" />
+					<ColumnDefinition Width="Auto" />
+					<ColumnDefinition Width="Auto" />
+				</Grid.ColumnDefinitions>
+				<Grid.RowDefinitions>
+					<RowDefinition Height="Auto" />
+					<RowDefinition Height="*" />
+				</Grid.RowDefinitions>
+				<Label Grid.Row="0" Grid.Column="0" Margin="0,5,0,5" Padding="8,2,0,2" Content="Add Configuration:" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" HorizontalAlignment="Left" Width="Auto" />
+				<pc:TextBox x:Name="AddHttpConfigurationName" LabelText="Name" Grid.Row="0" Grid.Column="1" Margin="5" Validate="AddHttpConfigurationName_Validate" />
+				<Button x:Name="AddHttpWebConfiguration" Grid.Row="0" Grid.Column="2" Margin="5" Content="Add HttpWebRequest Configuration" HorizontalAlignment="Right" IsEnabled="False" Click="AddHttpWebConfiguration_Click" />
+				<Button x:Name="AddHttpClientConfiguration" Grid.Row="0" Grid.Column="3" Margin="5" Content="Add HttpClient Configuration" HorizontalAlignment="Right" IsEnabled="False" Click="AddHttpClientConfiguration_Click" />
+				<Grid Grid.Row="1" Margin="0,5,0,0" Grid.ColumnSpan="4">
+					<Grid.ColumnDefinitions>
+						<ColumnDefinition Width="230" />
+						<ColumnDefinition Width="*" />
+					</Grid.ColumnDefinitions>
+					<ListBox x:Name="ConfigurationList" Grid.Column="0" ItemsSource="{Binding Path=ServiceType.RequestConfigurations}" AllowDrop="True" BorderThickness="0" Background="Transparent" Margin="0" SelectionMode="Single" Padding="-1,0" ItemContainerStyle="{StaticResource StretchedContainerStyle}" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Visible" VirtualizingStackPanel.IsVirtualizing="False" SelectionChanged="ConfigurationList_SelectionChanged" />
+					<ContentPresenter Grid.Column="1" Grid.Row="1" Margin="5,0,0,0" Content="{Binding Path=ActiveConfiguration}" />
 				</Grid>
 			</Grid>
 		</TabItem>
@@ -594,7 +700,7 @@
 										<RowDefinition Height="Auto" />
 										<RowDefinition Height="Auto" />
 									</Grid.RowDefinitions>
-									<ToggleButton Content="Allow Untrusted Issuers" Height="23" IsChecked="{Binding Path=IssuedTokenAllowUntrustedRsaIssuers}" Margin="5" Name="IssuedTokenAllowUntrustedRsaIssuers" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="0" />
+									<ToggleButton Content="Allow Untrusted Issuers" Height="23" IsChecked="{Binding Path=IssuedTokenAllowUntrustedRsaIssuers}" Margin="5" VerticalContentAlignment="Center" Grid.Row="0" Grid.Column="0" />
 									<Label Content="Validation Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" />
 									<ComboBox Height="23" Margin="126,5,5,5" SelectedIndex="{Binding Path=IssuedTokenCertificateValidationMode, Converter={StaticResource X509CertificateValidationModeConverter}}" VerticalContentAlignment="Center" Grid.Row="1" Grid.Column="0" >
 										<ComboBoxItem Content="None" />
@@ -678,12 +784,12 @@
 										<RowDefinition Height="Auto" />
 										<RowDefinition Height="Auto" />
 									</Grid.RowDefinitions>
-									<ToggleButton Content="Include Windows Groups" Height="23" Grid.Row="0" IsChecked="{Binding Path=UserNamePasswordCacheLogonTokens}" Margin="5" Name="UserNamePasswordCacheLogonTokens" />
-									<ToggleButton Content="Cache Logon Tokens" Height="23" Grid.Row="1" IsChecked="{Binding Path=UserNamePasswordIncludeWindowsGroups}" Margin="5" Name="UserNamePasswordIncludeWindowsGroups" />
+									<ToggleButton Content="Include Windows Groups" Height="23" Grid.Row="0" IsChecked="{Binding Path=UserNamePasswordCacheLogonTokens}" Margin="5" />
+									<ToggleButton Content="Cache Logon Tokens" Height="23" Grid.Row="1" IsChecked="{Binding Path=UserNamePasswordIncludeWindowsGroups}" Margin="5" />
 									<Label Content="Cached Token Lifetime:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0" />
-									<sf:TimeSpanEdit Format="hh:mm:ss" ShowArrowButtons="False" Height="24" Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordCachedLogonTokenLifetime, Mode=TwoWay}" Name="UserNamePasswordCachedLogonTokenLifetime" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0"  />
+									<sf:TimeSpanEdit Format="hh:mm:ss" ShowArrowButtons="False" Height="24" Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordCachedLogonTokenLifetime, Mode=TwoWay}" VerticalContentAlignment="Center" Grid.Row="2" Grid.Column="0"  />
 									<Label Content="Max Cached Logon Tokens:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="3" Grid.Column="0" />
-									<sf:IntegerTextBox Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordMaxCachedLogonTokens}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Row="3" Grid.Column="0" Name="UserNamePasswordMaxCachedLogonTokens" />
+									<sf:IntegerTextBox Margin="176,5,5,5" Value="{Binding Path=UserNamePasswordMaxCachedLogonTokens}" VerticalContentAlignment="Center" HorizontalContentAlignment="Left" Grid.Row="3" Grid.Column="0" />
 									<Label Content="Validation Mode:" HorizontalAlignment="Left" Margin="0" VerticalContentAlignment="Center" Grid.Row="4" Grid.Column="0" />
 									<ComboBox Height="23" Margin="115,5,5,5" SelectedIndex="{Binding Path=UserNamePasswordValidationMode, Converter={StaticResource UserNamePasswordValidationModeConverter}}" VerticalContentAlignment="Center" Grid.Row="4" Grid.Column="0"  >
 										<ComboBoxItem Content="None" />
@@ -700,8 +806,8 @@
 										<RowDefinition Height="Auto" />
 										<RowDefinition Height="Auto" />
 									</Grid.RowDefinitions>
-									<ToggleButton Content="Allow Anonymous Logon" Grid.Row="0"  IsChecked="{Binding Path=WindowsServiceIncludeWindowsGroups}" Margin="5" Name="WindowsServiceIncludeWindowsGroups" VerticalAlignment="Top" />
-									<ToggleButton Content="Include Windows Groups" Grid.Row="1" IsChecked="{Binding Path=WindowsServiceAllowAnonymousLogons}" Margin="5" Name="WindowsServiceAllowAnonymousLogons" VerticalAlignment="Top" />
+									<ToggleButton Content="Allow Anonymous Logon" Grid.Row="0"  IsChecked="{Binding Path=WindowsServiceIncludeWindowsGroups}" Margin="5" VerticalAlignment="Top" />
+									<ToggleButton Content="Include Windows Groups" Grid.Row="1" IsChecked="{Binding Path=WindowsServiceAllowAnonymousLogons}" Margin="5" VerticalAlignment="Top" />
 								</Grid>
 							</GroupBox>
 						</Grid>
